# ChangeLog for dev-python/ipaddress
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/ipaddress/ChangeLog,v 1.7 2015/06/21 10:47:50 maekke Exp $

  21 Jun 2015; Markus Meier <maekke@gentoo.org> ipaddress-1.0.7.ebuild:
  add ~arm, bug #549518

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

  17 May 2015; Jeroen Roovers <jer@gentoo.org> ipaddress-1.0.7.ebuild:
  Mark ~hppa (bug #549518).

  17 May 2015; Jeroen Roovers <jer@gentoo.org> ipaddress-1.0.7.ebuild:
  Mark ~ppc64 (bug #549518).

  16 May 2015; Justin Lecher <jlec@gentoo.org> ipaddress-1.0.7.ebuild:
  Fix LICENSE, HOMPAGE and DESCRIPTION, bug #549528

*ipaddress-1.0.7 (15 May 2015)

  15 May 2015; Justin Lecher <jlec@gentoo.org> +ipaddress-1.0.7.ebuild,
  +metadata.xml:
  New package; ebuild written by me