@@ -1,14 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST ipaddress-1.0.12.tar.gz 16158 SHA256 8c81980950b6360df6d5451456d09e92895f0a9d4aba96ceabcff66ef1f02b11 SHA512 df17687e7d83a2010ddd969049483d542aefc98641e2519202956edb05d77e23daf29334fedb9c6150139e281875dd8169441d023bbf97055226a0f22a40e8f4 WHIRLPOOL 823710fa6be92764c32e2608fb907314fdef90b047f05703add487a7153b26cb72e6fad98f66b7223b27a800151f14a00889adead5ff0edc54e8107ef8ff3648
 DIST ipaddress-1.0.7.tar.gz 15126 SHA256 2c99e9eaea2dacbe4038b3be772ec650f5b4f4c8cc479c3704b81673d96849d7 SHA512 bfbb7ab47c50b1a370dab6905e3212fcd960ecdfa2180605d0775f90f80485040a3760d7042ae503a52d1931e44a0b2dc102de22a107cf2dc4b1e7a441841e8b WHIRLPOOL 00bf3d33e34a3998fdc324a1dc4bbe15149a64c72f7f4b020769097d54e5c46fadd7281639e428b5706855b238738bc74a8655c5009e10626b43979539b59baf
+EBUILD ipaddress-1.0.12.ebuild 644 SHA256 7826a2cbbc2cf77109f13cd1d8864eadea1150412b35800b814efd3146777c31 SHA512 d5ad6f88e3bf2343c70655c58008de11265edb2b28489f4688b9dd9013e1e53374a7aaa76f56b72a5a386ec5b60fd4a4c694033d217d6949f05dfc7ab66b0d0a WHIRLPOOL e663ec3a9085f8a90b49bb5f15bea1fa93929fee59792b056ececb7fc568dfe6f5c6a8047a1ec46c2a7deadf4038faebbe1597de7183390f7ca01367a15acca9
 EBUILD ipaddress-1.0.7.ebuild 594 SHA256 997aa7b0c3e9491f40c7e9c4076823bad0327a530aa8d9699d1ceffdcee879a8 SHA512 1656cb6b7109e553530466990718a3cf5c73f73acc39e8773b000cd5abc10fd4d1a09174df7ef3e4733bba1a79f8cdb51b2ad4ba3178b123ba6a06ba7f2e5370 WHIRLPOOL 0e4f1cc3f15eb0ee3048f5f04b192a071ccdd9e7d9aa3e77af58adb948003d2e6e70a1114571f39308c681e2e22b55ac52f67d950e88110e639038931b7bba16
-MISC ChangeLog 998 SHA256 8459bfd4526f25c9937f04d108d5e8d1221f100adb079c0066185bb7191c44c7 SHA512 88ebb065c1e21672b066cd6ac1b47d0d6ace6be769f53faaaa06e997c1772345e10d6698d4d60e21c9048e7b0eac8cd34960be61fd4eee33ec87f781c5038e6b WHIRLPOOL a9f8e0a373169aab122285d60ee9ebc0bf0111ebd12ef281da6df7ffd236a75724ba4911865ff1003eb3499c6ed538ea08660ee01cf44eda61aedd6400eea4ca
+MISC ChangeLog 1160 SHA256 72f69c76342b708956efa896ddc80d3fda2355049f6eeadeada60a4fc67643e8 SHA512 3f544e2e1a5e98130fdb0831e8f8b253a284d6326121ebb4ec2ba3927903ad6a6c5f390e4c0f313d8768a9cd9bff25c419356b8f7f19dcaf2f3dbd0c1c9ffdd5 WHIRLPOOL 67f81654d23e230877d79d83a05770a17d6e5a326d95bf99770f6e8a64a94f234325555dd11f189fb4dc7e221abe716c78e22a1fd514b8192e31978db6fafa8e
 MISC metadata.xml 392 SHA256 30d542ac1d340fc97ab10b215be7af03b6e0a59a44b9ac13432d3fcd823633bf SHA512 195096f20271cc5308fbdb60d06a18eac0fac8ba00686eb2b099d18496849179280b58857665112c035ee2b6c4b97478136c8625e00c89346274b5ef5c5d6c68 WHIRLPOOL 610d71a4c52bb45296f2f1f4ef00c76f532b5311a4fb94f5857c2d0a07e211d7d9f07a137d45b9ba6ca459b5006d043945f3d164d505730375326a5e7a8f333c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlWGllgACgkQkKaRLQcq0GJlbQCeNwe/RNndNYU5uu95ypYJNmcf
-bB4AmgMENsZiAsikQP/9OBrgHS1cICMM
-=c1al
+iKYEAREIAGYFAlWq7ZlfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw0QUgCgzGYkbMq8e6w3aenIE1NxQW8u
+OKAAnijLrB/YqgRRXpQhnbN83F6OL4p6
+=IuC7
 -----END PGP SIGNATURE-----
